# learn-ibis

./: .env  README.md  conftest.py  justfile  pyproject.toml
scripts/: asofjoin.py  deferred_literals.py  joins.py  jsonfloat.py  multi_joins.py  nullnan.py  pd_concat.py  postgres_jsonb_example.py  pyarrow_append_null.py  start_db.sh  stop_db.sh
src/learn_ibis/: __init__.py  config.py  table_ops.py
tests/: test_asof_join.py  test_nans.py  test_table_ops.py
