[project]
name = "learn-ibis"
version = "0.1.0"
description = "Snippets and examples to improve my understanding of ibis and databases"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ibis-framework[duckdb]>=10.6.0",
 "ipykernel>=6.29.5",
 "pandas>=2.3.0",
]

[dependency-groups]
dev = ["ruff>=0.12.0", "ty>=0.0.1a11"]
